Abstracted Cube into own File
Next to work on is to abstract light to it's own class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,8 @@ set(SOURCES
         src/Input.h
         src/Objects/Object.cpp
         src/Objects/Object.h
+        src/Light.cpp
+        src/Light.h
 )
 
 add_executable(opengl_renderer ${SOURCES})
