--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.20)
+cmake_policy(VERSION 3.20)
 project(opengl_renderer)
 
 set(CMAKE_CXX_STANDARD 20)
@@ -14,7 +15,7 @@ include(FetchContent)
 FetchContent_Declare(
         glm
         GIT_REPOSITORY	https://github.com/g-truc/glm.git
-        GIT_TAG 	bf71a834948186f4097caa076cd2663c69a10e1e #refs/tags/1.0.1
+        GIT_TAG 	0.9.9.8 #refs/tags/1.0.1
 )
 
 FetchContent_MakeAvailable(glm)
